# ChangeLog for app-editors/gummi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Aug 2009; Alexander van der Mey (alexandervdm)
  <alexvandermey@gmail.com> +gummi-0.1f.ebuild, +metadata.xml:
  New Ebuild for bug 282876 - thanks to sedzimir, keenblade and Tommy[D]
