@@ -1,4 +1,4 @@
 DIST gummi-0.1f.tar.gz 19238 RMD160 a539468f0dc1708abd7c90a15dcea42f26b0844f SHA1 73653a47972863f3bdd32d4a3102423d74778c7a SHA256 ddf0b42b87afd88b2bdffe5f8bbd77964118d877ad8434feb591e3686a659278
-EBUILD gummi-0.1f.ebuild 650 RMD160 36f8772f3787c3d6f50834561318b8dc375fed6b SHA1 8ce5bf8879dc742fdc471982be29685fd732357c SHA256 82b598910eb2330dccd313272b07222c2e9a4f0cc59e8b62016059586f8069cf
-MISC ChangeLog 307 RMD160 1798b6bf64f3b0d4275d22a26aae9c2156790da9 SHA1 ee00370c955f70133ac3e42e2750229ac28618c2 SHA256 988b72cf8c79fb28c63ae2ba2fe4559a6c2a7a55b3d58b2d07733a03da94caf0
+EBUILD gummi-0.1f.ebuild 595 RMD160 dd641c5a5b9385d17a6bd64ee433aec18d406f06 SHA1 421e96003be56ad8c1c379f144e9ea6e66247d12 SHA256 12b3cca0ff977c2b83444a8934110bce5014f0555097227f71beb9f26b2066a4
+MISC ChangeLog 484 RMD160 7d94802286458a09ea872b3d2259d86fef92679e SHA1 dfea5cbbcd0decc58f3aee138fc27b32893af639 SHA256 76468b7a9d6a92a58592e1c79f80b0651d93c2d1508f8ff7818792b996f082a2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
