@@ -5,22 +5,18 @@
 inherit distutils
 
 DESCRIPTION="Simple LaTeX editor for GTK+ users"
-SRC_URI="http://gummi.googlecode.com/files/${P}.tar.gz"
 HOMEPAGE="http://code.google.com/p/gummi/"
+SRC_URI="http://gummi.googlecode.com/files/${P}.tar.gz"
 
-SLOT="0"
 LICENSE="|| ( MIT BEER-WARE )"
+SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-DEPEND=""
 RDEPEND=">=dev-python/gnome-python-2.22.3
-        >=dev-python/pygtksourceview-2.4.0
-        dev-python/python-poppler
-        >=dev-texlive/texlive-latex-2008-r1
-        >=dev-texlive/texlive-latexextra-2008-r1
-        >=x11-libs/gtk+-2.16.1
-        >=x11-libs/pango-1.24.2"
-
-
-
+	>=dev-python/pygtksourceview-2.4.0
+	dev-python/python-poppler
+	>=dev-texlive/texlive-latex-2008-r1
+	>=dev-texlive/texlive-latexextra-2008-r1
+	>=x11-libs/gtk+-2.16.1
+	>=x11-libs/pango-1.24.2"
