@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
+  gummi-0.1f.ebuild:
+  Whitespace & retab, drop empty DEPEND, adjust variable order to match
+  CodingStandards.
+
   27 Aug 2009; Alexander van der Mey (alexandervdm)
   <alexvandermey@gmail.com> +gummi-0.1f.ebuild, +metadata.xml:
   New Ebuild for bug 282876 - thanks to sedzimir, keenblade and Tommy[D]
